# programowanie3-proj

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  app.js  binding.gyp  build_and_run_backend.sh  docker-compose.yml  entrypoint.sh  hello.cc  main.cpp  nodemon.json  package.json  run_project.sh  webpack.config.js  webpackDevServer.js
backend/: DatabaseController.h  Env.h  GetFile.h  Request.h  Response.h  Route.h  Server.h  Session.h  initDatabase.h
backend/User/: User.h  checkIfUserExists.h  getAllUsers.h  getUserData.h
backend/logic/: hello.cc
backend/routes/: GetAllUsers.h  GetUserData.h  Login.h  Logout.h  Register.h
backend/server/: app.js
common/: ajaxService.js
frontend/: auth.jsx  index.jsx
frontend/components/: Card.js  CardSet.js  Croupier.js  Dashboard.jsx  Enter.jsx  Login.js  Login.jsx  Player.js  Register.jsx  Table.js
frontend/styles/: entry.scss  index.scss
frontend/styles/components/: Card.scss  CardSet.scss  Croupier.scss  Player.scss
old/: Dockerfile  binding.gyp  docker-compose.yml  entrypoint.sh  package.json
old/backend/logic/: DBController.h  hello.cpp
old/backend/server/: app.js
old/frontend/: main.js
old/frontend/components/: Table.js
old/frontend/styles/: common.scss
old/frontend/styles/components/: Table.scss
public/: index.html
